[gd_scene load_steps=4 format=3 uid="uid://v1ttq8xpyr6l"]

[ext_resource type="Script" uid="uid://cyl2ofampse2x" path="res://Menu&UI/Menu/GUI/PauseMenu/PauseMenu.gd" id="1_m4vaf"]
[ext_resource type="Texture2D" uid="uid://becjbwwu8fb3" path="res://Menu&UI/Theme/CraftingTable/Buttons/Pause.png" id="1_vm1s8"]
[ext_resource type="Texture2D" uid="uid://8n0pkc6tkmlc" path="res://Menu&UI/Theme/CraftingTable/Buttons/Resume.png" id="2_8y6wp"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4vaf")

[node name="pause" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 3.0
offset_right = 317.0
offset_bottom = 19.0
texture_normal = ExtResource("1_vm1s8")
stretch_mode = 3

[node name="PauseScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2
color = Color(0, 0, 0, 0.247059)

[node name="resume" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 301.0
offset_top = 3.0
offset_right = 317.0
offset_bottom = 19.0
texture_normal = ExtResource("2_8y6wp")
stretch_mode = 4

[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
